[gd_scene load_steps=6 format=2]

[ext_resource path="res://Art/gas_stove89x64.png" type="Texture" id=1]
[ext_resource path="res://Stove.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 47, 58.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 46 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Stove" type="StaticBody2D"]
collision_layer = 0
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -2, -0.5 )
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = -1.5708
frames = SubResource( 1 )
flip_v = true

[node name="StoveTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="StoveTimer" to="." method="_on_StoveTimer_timeout"]
